<resources>
    <string name="app_name">"Meh Notifier "</string>

  <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>    
    
    <!-- Preferences -->
    <string name="color_title">Text Color</string>
    <string name="color_summary">Color of text in expanded notification</string>
    <string name="notification_switch_title">Enable Notification</string>
    <string name="notification_switch_text">Enables Meh Notification</string>
    <string name="default_time_title">Time to check Meh</string>
    <string name="check_now_title">Check Now</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="enable_sound_title">Play notification sound</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="widget_update_title">Update Widget</string>
    <string name="widget_color_summary">Color of text in widget</string>


</resources>
