<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <CheckBoxPreference
        android:key="notifications_sound"
        android:title="@string/enable_sound_title"
        android:defaultValue="false" />

    <!-- Allows the user to choose a ringtone in the 'notification_expanded' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:dependency="notifications_sound"
        android:key="notifications_ringtone"
        android:title="@string/pref_title_ringtone"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <CheckBoxPreference
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate"
        android:defaultValue="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="color1"
        android:title="@string/color_title"
        android:summary="@string/color_summary"
        android:defaultValue="@integer/COLOR_BLACK"
        />


</PreferenceScreen>
